first commit 16 jan

--- a/templates/one.html
+++ b/templates/one.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="row">
-        <div class="col-lg-3 bg-white text-dark"></div>
+        <h1>Pao</h1>
 </div>
 </body>
 </html>
